--- a/ToDo-App/templates/dashboard/index.html
+++ b/ToDo-App/templates/dashboard/index.html
@@ -33,12 +33,50 @@
             </div>
         </div>
         <div class="col-md-6">
+            <div class="card shadow">
             <div class="card-header">ToDo Form</div>
             <div class="card-body">
                 <form action="">
-                    <label for=""></label>
+                    <label for="">Title</label>
+                    <input class="form-control" type="text" name="title" placeholder="Add todo.....">
+                    <input class="btn btn-primary mt-2 btn-sm" type="submit" value="Add">
                 </form>
             </div>
+        </div>
+        </div>
+    </div>
+    <div class="border-start border-5 mt-2 shadow">
+        <div class="card-body">
+            <h5>1 | Learn Python</h5>
+            <span class="badge bg-success">Complete</span>
+            <a class="btn btn-info btn-sm" href="">Update</a>
+            <a class="btn btn-danger btn-sm" href="">Delete</a>
+        </div>
+    </div>
+    <div class="border-start border-5 mt-2 shadow">
+        <div class="card-body">
+            <h5>1 | Learn Python</h5>
+            <span class="badge bg-success">Complete</span>
+            <a class="btn btn-info btn-sm" href="">Update</a>
+            <a class="btn btn-danger btn-sm" href="">Delete</a>
+        </div>
+    </div>
+
+    <div class="border-start border-5 mt-2 shadow">
+        <div class="card-body">
+            <h5>1 | Learn Python</h5>
+            <span class="badge bg-success">Complete</span>
+            <a class="btn btn-info btn-sm" href="">Update</a>
+            <a class="btn btn-danger btn-sm" href="">Delete</a>
+        </div>
+    </div>
+
+    <div class="border-start border-5 mt-2 shadow">
+        <div class="card-body">
+            <h5>1 | Learn Python</h5>
+            <span class="badge bg-success">Complete</span>
+            <a class="btn btn-info btn-sm" href="">Update</a>
+            <a class="btn btn-danger btn-sm" href="">Delete</a>
         </div>
     </div>
 </div>
