--- a/ToDo-App/templates/dashboard/index.html
+++ b/ToDo-App/templates/dashboard/index.html
@@ -45,14 +45,15 @@
         </div>
         </div>
     </div>
-    {% for todo in %}
+    {% for todo in todo_list %}
     <div class="border-start border-5 mt-2 shadow">
         <div class="card-body">
-            <h5>1 | Learn Python</h5>
+            <h5>{{todo.id}} | {{todo.title}}</h5>
             <span class="badge bg-success">Complete</span>
             <a class="btn btn-info btn-sm" href="">Update</a>
-            <a class="btn btn-danger btn-sm" href="">Delete</a>
+            <a class="btn btn-danger btn-sm" href="/delete/{{todo.id}}">Delete</a>
         </div>
     </div>
-    
+    {% endfor %}
+    </div>
 {% endblock %}
