--- a/ToDo-App/templates/dashboard/index.html
+++ b/ToDo-App/templates/dashboard/index.html
@@ -49,8 +49,12 @@
     <div class="border-start border-5 mt-2 shadow">
         <div class="card-body">
             <h5>{{todo.id}} | {{todo.title}}</h5>
-            <span class="badge bg-success">Complete</span>
-            <a class="btn btn-info btn-sm" href="">Update</a>
+            {% if todo.complete %}
+            <span class="badge bg-success">Completed</span>
+            {% else %}
+            <span class="badge bg-secondary">Uncompleted</span>
+            {% endif %}
+            <a class="btn btn-info btn-sm" href="/update/{{todo.id}}">Update</a>
             <a class="btn btn-danger btn-sm" href="/delete/{{todo.id}}">Delete</a>
         </div>
     </div>
