--- a/ToDo-App/templates/dashboard/index.html
+++ b/ToDo-App/templates/dashboard/index.html
@@ -12,20 +12,20 @@
                             <div class="card shadow">
                             <div class="card-body">
                                 <h6>Total</h6>
-                                <p class="text-center">10</p>
+                                <p class="text-center">{{total_todo}}</p>
                             </div>
                         </div>
                     </div>
                         <div class="col-md-4"><div class="card shadow">
                             <div class="card-body">
                                 <h6>Completed</h6>
-                                <p class="text-center">6</p>
+                                <p class="text-center">{{completed_todo}}</p>
                             </div>
                         </div></div>
                         <div class="col-md-4"><div class="card shadow">
                             <div class="card-body">
                                 <h6>Uncompleted</h6>
-                                <p class="text-center">4</p>
+                                <p class="text-center">{{uncompleted_todo}}</p>
                             </div>
                         </div></div>
                     </div>
@@ -45,6 +45,9 @@
         </div>
         </div>
     </div>
+    {% if total_todo == 0 %}
+    <marquee class="mt-3 display-5" behavior="" direction="">No Todo in Database.... Create  new Todo in Todo form</marquee>
+    {% endif %} <br />
     {% for todo in todo_list %}
     <div class="border-start border-5 mt-2 shadow">
         <div class="card-body">
